--- a/main.html
+++ b/main.html
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+	<div>
+		<a href='https://www.youtube.com/watch?v=kHUdk6qb_c0&pp=ygUEc29uZw%3D%3D'>My current favourite song is </a>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
